[gd_scene load_steps=9 format=2]

[ext_resource path="res://level.tscn" type="PackedScene" id=1]
[ext_resource path="res://metaltank.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/Interactable.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 1, 0, 0.984314, 0.254902 )

[sub_resource type="SphereShape" id=3]

[sub_resource type="CylinderShape" id=4]
radius = 1.73895
height = 4.46923

[sub_resource type="CylinderShape" id=5]

[node name="Windy" type="Spatial"]

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="Interactable" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.52635, 0, -0.792223 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Interactable"]
transform = Transform( 0.829857, 0, -0.557977, 0, 1, 0, 0.557977, 0, 0.829857, -0.106171, 2.45713, 0.11647 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ClickSpace" type="Area" parent="Interactable"]
transform = Transform( 0.829857, 0, -0.557977, 0, 1, 0, 0.557977, 0, 0.829857, -0.106171, 2.45713, 0.11647 )

[node name="CollisionShape" type="CollisionShape" parent="Interactable/ClickSpace"]
shape = SubResource( 3 )

[node name="metaltank" parent="Interactable" instance=ExtResource( 2 )]
transform = Transform( 0.311224, 0, 0.950337, 0, 1, 0, -0.950337, 0, 0.311224, 0.00102901, 1.8352, 0.16369 )

[node name="StaticBody" type="StaticBody" parent="Interactable/metaltank"]

[node name="CollisionShape" type="CollisionShape" parent="Interactable/metaltank/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63848, 1.48433, -0.00305605 )
shape = SubResource( 4 )

[node name="InteractSpace" type="Area" parent="Interactable"]
transform = Transform( 0.575445, 0, 0, 0, 1.25308, 0, 0, 0, 0.575445, -0.442061, 1.62251, 1.1174 )
input_ray_pickable = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Interactable/InteractSpace"]
shape = SubResource( 5 )

[node name="InteractTimer" type="Timer" parent="Interactable"]
one_shot = true

[connection signal="input_event" from="Interactable/ClickSpace" to="Interactable" method="_on_ClickSpace_input_event"]
[connection signal="timeout" from="Interactable/InteractTimer" to="Interactable" method="_on_InteractTimer_timeout"]
